# desktop-doc-execution-studio

./: .gitignore  README.md  package-lock.json  package.json
app/engine/: coaching_generator.py  demo_payloads.py  execution_engine.py  interview_practice.py  llm_provider.py  main.py  markdown_renderers.py  material_validation.py  product_constants.py  prompt_builders.py  readiness.py  refined_draft.py  requirements.txt  result_pack_zip.py  resume_draft_builder.py  schema_definitions.py  snippet_extractor.py  suggestion_rewrite.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.css  App.jsx  index.css
cases/sample_case_01/input/: interview_notes.md  jd_ai_pm.txt  project_notes.md  resume_v3.txt  xiaohe_interview_notes.md  xiaohe_jd_pm.txt  xiaohe_project_notes.md  xiaohe_resume.txt
docs/: PRODUCT_ROADMAP_AND_ARCH_RESERVE.md  TAURI_DESKTOP.md  index.html  styles.css
docs/screenshots/: README.md
outputs/demo_outputs/sample_case_01/: archive_manifest.json  interview_pack.md  interview_pack.payload.json  job_brief.md  job_brief.payload.json  resume_delta.md  resume_delta.payload.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
