[package]
name = "desktop_job_studio"
version = "0.1.0"
description = "Tauri shell for Desktop Job Materials Studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
